<resources>
    <string name="app_name">TicTacToe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Strings in mainActivity -->
    <string name="cover">Cover</string>
    <string name="play_game">Play game</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Strings in gameModeActivity-->
    <string name="title_activity_game_mode">Game mode</string>
    <string name="gameModeHeader">Select game mode</string>
    <string name="onePlayer">One player</string>
    <string name="twoPlayer">Two player</string>

    <!-- Strings in DifficultyActivity -->
    <string name="title_activity_difficulty">Difficulty</string>
    <string name="difficultyHeader">Select difficulty level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!-- Strings in BoardSize activity -->
    <string name="title_activity_board_size">Board size</string>
    <string name="boardSizeHeader">Select board size</string>
    <string name="size3x3">3 x 3</string>
    <string name="size5x5">5 x 5</string>

    <!-- Strings in Game3x3 activity -->
    <string name="title_activity_one_player">3 x 3 Game</string>
    <string name="str33com">Computer</string>
    <string name="str33hum">Human</string>
    <string name="str33p1">Player 1</string>
    <string name="str33p2">Player 2</string>

    <!-- Strings in Game5x5 activity -->
    <string name="title_activity_game5x5">5 x 5 Game</string>

    <!-- Strings in Help activity -->
    <string name="title_activity_help">Help</string>
    <string name="help_msg">Rules of the game:\n\nThe object of Tic Tac Toe is to get three in a row. You play on a three by three game board. The first player is known as X and the second is O. Players alternate placing Xs and Os on the game board until either oppent has three in a row or all nine squares are filled.\n\nNote: In our one player game mode computer always put O and human always put X.</string>

    <!-- Strings in About activity -->
    <string name="title_activity_about">About</string>
    <string name="about_msg">This app is created as an AI project.\n\nContributed developers:\n1.Mohammad Mazedul Islam\n2.Sourav Sen Tonmoy\n3.Shahed Shahriar</string>


    
</resources>
