<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cover"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cover"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:text="@string/play_game"
        android:onClick="playGame"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:text="@string/help"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:text="@string/about"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:text="@string/exit"
        android:onClick="exitApp"/>

</LinearLayout>
