<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.chholamuri.tictactoe.DifficultyActivity"
    android:background="@color/background">

    <TextView android:text="@string/difficultyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_weight="3"/>

    <Button
        android:id="@+id/btneasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:layout_weight="2.3"
        android:onClick="easy"
        android:background="@color/button"/>

    <Button
        android:id="@+id/btnmedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:layout_weight="2.3"
        android:onClick="medium"
        android:background="@color/button"/>

    <Button
        android:id="@+id/btnhard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:layout_weight="2.3"
        android:onClick="hard"
        android:background="@color/button"/>

</LinearLayout>
