<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.chholamuri.tictactoe.BoardSizeActivity"
    android:orientation="vertical">

    <TextView android:text="@string/boardSizeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/btnSize3x3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.5"
        android:text="@string/size3x3"
        android:layout_marginTop="20dp"
        android:onClick="size3x3"/>

    <Button
        android:id="@+id/btnSize5x5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.5"
        android:text="@string/size5x5"
        android:layout_marginTop="20dp"
        android:onClick="size5x5"/>

</LinearLayout>
