<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.chholamuri.tictactoe.gameModeActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView android:text="@string/gameModeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/btn1p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onePlayer"
        android:layout_marginTop="20dp"
        android:layout_weight="3.5"
        android:onClick="start1pMatch"
        android:background="@color/button"/>

    <Button
        android:id="@+id/btn2p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twoPlayer"
        android:layout_marginTop="20dp"
        android:layout_weight="3.5"
        android:onClick="start2pMatch"
        android:background="@color/button"/>

</LinearLayout>
